# barcodequery

./: 1234.txt  Cargo.toml  README.md
src/: lib.rs  main.rs
src/actuator/: actuator.rs
src/barcode_query/: barcode_query_hashstorage_impl.rs  mod.rs  model.rs  storage.rs
src/barcode_query_app/: app_async.rs  barcode_query_app.rs  mod.rs
src/barcode_reader/: console_reader.rs  mod.rs  reader.rs  reader_enum.rs
src/web/: mod.rs  server_axum.rs  state.rs
src/web/handlers/: health_check.rs  mod.rs  websocket.rs
tests/api/: health_check.rs  helpers.rs  main.rs  websocket_server.rs
