[package]
name = "barcodequery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "barcodequery"

[dependencies]
anyhow = "1.0"
axum = { version = "0.5.11", features= ["ws", "headers"] }
futures = "0.3.19"
hyper = "0.14"
tower = "0.4.13"
tokio = { version = "1.19.2", features = ["full", "sync"] }
tokio-stream = "0.1.9"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2.2"

[dev-dependencies]
tungstenite = "0.17"
tempfile = "3.1.0"
url = "2.2.2"
tokio-tungstenite = "*"
reqwest = "0.11.11"



